src/main/java/edu/isi/mediator/domain/parser/grammar/DomainModelParser.java
/*******************************************************************************
 * Copyright 2012 University of Southern California
 * 
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 * 
 *        http://www.apache.org/licenses/LICENSE-2.0
 * 
 *   Unless required by applicable law or agreed to in writing, software
 *   distributed under the License is distributed on an "AS IS" BASIS,
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
 *  
 *    This code was developed by the Information Integration Group as part 
 *    of the Karma project at the Information Sciences Institute of the 
 *    University of Southern California.  For more information, publications, 
 *    and related projects, please see: http://www.isi.edu/integration
 ******************************************************************************/
package edu.isi.mediator.domain.parser.grammar;

// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g 2011-07-20 11:01:06

import org.antlr.runtime.BitSet;
import org.antlr.runtime.IntStream;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.MismatchedTokenException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

@SuppressWarnings("all")
public class DomainModelParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DOMAIN_MODEL", "SOURCE_SCHEMA", "DOMAIN_SCHEMA", "GAV_RULES", "LAV_RULES", "GLAV_RULES", "UAC_RULES", "QUERIES", "RULE", "ANTECEDENT", "CONSEQUENT", "RELATION_PRED", "FUNCTION_PRED", "BUILTIN_PRED", "FUNCTIONS", "NAMESPACES", "IS_NULL", "ISNOT_NULL", "IN", "NOT_IN", "STRING", "INT", "FLOAT", "ID", "NUMERIC", "WS", "COMMENT", "'SOURCE_SCHEMA:'", "'DOMAIN_SCHEMA:'", "'FUNCTIONS:'", "'NAMESPACES:'", "':'", "'('", "','", "')'", "'LAV_RULES:'", "'GLAV_RULES:'", "'GAV_RULES:'", "'UAC_RULES:'", "'QUERIES:'", "'<-'", "'::'", "':.'", "'->'", "'^'", "'NULL'", "'['", "']'", "'='", "'!='", "'<'", "'>'", "'>='", "'<='", "'<>'", "'LIKE'", "'IS'", "'NOT'", "'IN'"
    };
    public static final int GLAV_RULES=9;
    public static final int T__62=62;
    public static final int FUNCTIONS=18;
    public static final int FLOAT=26;
    public static final int ID=27;
    public static final int T__61=61;
    public static final int ANTECEDENT=13;
    public static final int EOF=-1;
    public static final int T__60=60;
    public static final int DOMAIN_MODEL=4;
    public static final int GAV_RULES=7;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int IN=22;
    public static final int T__52=52;
    public static final int IS_NULL=20;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int FUNCTION_PRED=16;
    public static final int T__59=59;
    public static final int COMMENT=30;
    public static final int T__50=50;
    public static final int LAV_RULES=8;
    public static final int BUILTIN_PRED=17;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int RULE=12;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int UAC_RULES=10;
    public static final int CONSEQUENT=14;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int DOMAIN_SCHEMA=6;
    public static final int INT=25;
    public static final int NUMERIC=28;
    public static final int ISNOT_NULL=21;
    public static final int RELATION_PRED=15;
    public static final int SOURCE_SCHEMA=5;
    public static final int NAMESPACES=19;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=29;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int QUERIES=11;
    public static final int T__39=39;
    public static final int NOT_IN=23;
    public static final int STRING=24;

    // delegates
    // delegators


        public DomainModelParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DomainModelParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return DomainModelParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g"; }


    protected void mismatch(IntStream input, int ttype, BitSet follow)
        throws RecognitionException
    { 
        throw new MismatchedTokenException(ttype, input);
    }

    public Object recoverFromMismatchedSet(IntStream input, RecognitionException re, BitSet follow)
        throws RecognitionException
    {
        throw re;
    }


    public static class domain_model_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "domain_model"
    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:80:1: domain_model : ( section )* -> ^( DOMAIN_MODEL ( section )+ ) ;
    public final DomainModelParser.domain_model_return domain_model() throws RecognitionException {
        DomainModelParser.domain_model_return retval = new DomainModelParser.domain_model_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        DomainModelParser.section_return section1 = null;


        RewriteRuleSubtreeStream stream_section=new RewriteRuleSubtreeStream(adaptor,"rule section");
        try {
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:81:2: ( ( section )* -> ^( DOMAIN_MODEL ( section )+ ) )
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:81:4: ( section )*
            {
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:81:4: ( section )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=31 && LA1_0<=34)||(LA1_0>=39 && LA1_0<=43)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:81:5: section
            	    {
            	    pushFollow(FOLLOW_section_in_domain_model157);
            	    section1=section();

            	    state._fsp--;
            	    if (state.failed){
						return retval;
					}
            	    if ( state.backtracking==0 ){
						stream_section.add(section1.getTree());
					}

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);



            // AST REWRITE
            // elements: section
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 81:15: -> ^( DOMAIN_MODEL ( section )+ )
            {
                // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:81:18: ^( DOMAIN_MODEL ( section )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DOMAIN_MODEL, "DOMAIN_MODEL"), root_1);

                if ( !(stream_section.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_section.hasNext() ) {
                    adaptor.addChild(root_1, stream_section.nextTree());

                }
                stream_section.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException re)
        {
            reportError(re);
            throw re;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "domain_model"

    public static class section_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "section"
    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:83:1: section : ( schema | functions | rules | namespaces );
    public final DomainModelParser.section_return section() throws RecognitionException {
        DomainModelParser.section_return retval = new DomainModelParser.section_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        DomainModelParser.schema_return schema2 = null;

        DomainModelParser.functions_return functions3 = null;

        DomainModelParser.rules_return rules4 = null;

        DomainModelParser.namespaces_return namespaces5 = null;



        try {
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:84:2: ( schema | functions | rules | namespaces )
            int alt2=4;
            switch ( input.LA(1) ) {
            case 31:
            case 32:
                {
                alt2=1;
                }
                break;
            case 33:
                {
                alt2=2;
                }
                break;
            case 39:
            case 40:
            case 41:
            case 42:
            case 43:
                {
                alt2=3;
                }
                break;
            case 34:
                {
                alt2=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:84:4: schema
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_schema_in_section177);
                    schema2=schema();

                    state._fsp--;
                    if (state.failed){
						return retval;
					}
                    if ( state.backtracking==0 ){
						adaptor.addChild(root_0, schema2.getTree());
					}

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:84:13: functions
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_functions_in_section181);
                    functions3=functions();

                    state._fsp--;
                    if (state.failed){
						return retval;
					}
                    if ( state.backtracking==0 ){
						adaptor.addChild(root_0, functions3.getTree());
					}

                    }
                    break;
                case 3 :
                    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:84:25: rules
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_rules_in_section185);
                    rules4=rules();

                    state._fsp--;
                    if (state.failed){
						return retval;
					}
                    if ( state.backtracking==0 ){
						adaptor.addChild(root_0, rules4.getTree());
					}

                    }
                    break;
                case 4 :
                    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:84:33: namespaces
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_namespaces_in_section189);
                    namespaces5=namespaces();

                    state._fsp--;
                    if (state.failed){
						return retval;
					}
                    if ( state.backtracking==0 ){
						adaptor.addChild(root_0, namespaces5.getTree());
					}

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException re)
        {
            reportError(re);
            throw re;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "section"

    public static class schema_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "schema"
    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:86:1: schema : schema_name ( schema_exp )* -> ^( schema_name ( schema_exp )* ) ;
    public final DomainModelParser.schema_return schema() throws RecognitionException {
        DomainModelParser.schema_return retval = new DomainModelParser.schema_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        DomainModelParser.schema_name_return schema_name6 = null;

        DomainModelParser.schema_exp_return schema_exp7 = null;


        RewriteRuleSubtreeStream stream_schema_name=new RewriteRuleSubtreeStream(adaptor,"rule schema_name");
        RewriteRuleSubtreeStream stream_schema_exp=new RewriteRuleSubtreeStream(adaptor,"rule schema_exp");
        try {
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:87:2: ( schema_name ( schema_exp )* -> ^( schema_name ( schema_exp )* ) )
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:87:4: schema_name ( schema_exp )*
            {
            pushFollow(FOLLOW_schema_name_in_schema199);
            schema_name6=schema_name();

            state._fsp--;
            if (state.failed){
				return retval;
			}
            if ( state.backtracking==0 ){
				stream_schema_name.add(schema_name6.getTree());
			}
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:87:16: ( schema_exp )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:87:17: schema_exp
            	    {
            	    pushFollow(FOLLOW_schema_exp_in_schema202);
            	    schema_exp7=schema_exp();

            	    state._fsp--;
            	    if (state.failed){
						return retval;
					}
            	    if ( state.backtracking==0 ){
						stream_schema_exp.add(schema_exp7.getTree());
					}

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);



            // AST REWRITE
            // elements: schema_exp, schema_name
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 87:30: -> ^( schema_name ( schema_exp )* )
            {
                // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:87:33: ^( schema_name ( schema_exp )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_schema_name.nextNode(), root_1);

                // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:87:47: ( schema_exp )*
                while ( stream_schema_exp.hasNext() ) {
                    adaptor.addChild(root_1, stream_schema_exp.nextTree());

                }
                stream_schema_exp.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException re)
        {
            reportError(re);
            throw re;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "schema"

    public static class schema_name_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "schema_name"
    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:89:1: schema_name : ( 'SOURCE_SCHEMA:' -> ^( SOURCE_SCHEMA ) | 'DOMAIN_SCHEMA:' -> ^( DOMAIN_SCHEMA ) );
    public final DomainModelParser.schema_name_return schema_name() throws RecognitionException {
        DomainModelParser.schema_name_return retval = new DomainModelParser.schema_name_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal8=null;
        Token string_literal9=null;

        CommonTree string_literal8_tree=null;
        CommonTree string_literal9_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");

        try {
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:90:2: ( 'SOURCE_SCHEMA:' -> ^( SOURCE_SCHEMA ) | 'DOMAIN_SCHEMA:' -> ^( DOMAIN_SCHEMA ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==31) ) {
                alt4=1;
            }
            else if ( (LA4_0==32) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:90:4: 'SOURCE_SCHEMA:'
                    {
                    string_literal8=(Token)match(input,31,FOLLOW_31_in_schema_name222); if (state.failed){
						return retval;
					} 
                    if ( state.backtracking==0 ){
						stream_31.add(string_literal8);
					}



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 90:21: -> ^( SOURCE_SCHEMA )
                    {
                        // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:90:24: ^( SOURCE_SCHEMA )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(SOURCE_SCHEMA, "SOURCE_SCHEMA"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:91:4: 'DOMAIN_SCHEMA:'
                    {
                    string_literal9=(Token)match(input,32,FOLLOW_32_in_schema_name233); if (state.failed){
						return retval;
					} 
                    if ( state.backtracking==0 ){
						stream_32.add(string_literal9);
					}



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 91:21: -> ^( DOMAIN_SCHEMA )
                    {
                        // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:91:24: ^( DOMAIN_SCHEMA )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DOMAIN_SCHEMA, "DOMAIN_SCHEMA"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException re)
        {
            reportError(re);
            throw re;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "schema_name"

    public static class functions_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "functions"
    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:93:1: functions : 'FUNCTIONS:' ( function_name )* -> ^( FUNCTIONS ( function_name )* ) ;
    public final DomainModelParser.functions_return functions() throws RecognitionException {
        DomainModelParser.functions_return retval = new DomainModelParser.functions_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal10=null;
        DomainModelParser.function_name_return function_name11 = null;


        CommonTree string_literal10_tree=null;
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleSubtreeStream stream_function_name=new RewriteRuleSubtreeStream(adaptor,"rule function_name");
        try {
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:94:2: ( 'FUNCTIONS:' ( function_name )* -> ^( FUNCTIONS ( function_name )* ) )
            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:94:4: 'FUNCTIONS:' ( function_name )*
            {
            string_literal10=(Token)match(input,33,FOLLOW_33_in_functions249); if (state.failed){
				return retval;
			} 
            if ( state.backtracking==0 ){
				stream_33.add(string_literal10);
			}

            // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:94:17: ( function_name )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==ID) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:94:18: function_name
            	    {
            	    pushFollow(FOLLOW_function_name_in_functions252);
            	    function_name11=function_name();

            	    state._fsp--;
            	    if (state.failed){
						return retval;
					}
            	    if ( state.backtracking==0 ){
						stream_function_name.add(function_name11.getTree());
					}

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);



            // AST REWRITE
            // elements: function_name
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 94:34: -> ^( FUNCTIONS ( function_name )* )
            {
                // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:94:37: ^( FUNCTIONS ( function_name )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FUNCTIONS, "FUNCTIONS"), root_1);

                // C:\\Documents and Settings\\mariam\\My Documents\\mediator-new\\workspace\\domainparser\\DomainModel.g:94:49: ( function_name )*
                while ( stream_function_name.hasNext() ) {
                    adaptor.addChild(root_1, stream_function_name.nextTree());

                }
                stream_function_name.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
